@@ -788,6 +788,20 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|Warehouse
+operator|.
+name|closeFs
+argument_list|(
+name|srcFs
+argument_list|)
+expr_stmt|;
+name|Warehouse
+operator|.
+name|closeFs
+argument_list|(
+name|destFs
+argument_list|)
+expr_stmt|;
 throw|throw
 operator|new
 name|InvalidOperationException
