@@ -384,7 +384,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * Helper function to convert IOException to MetaException    */
+comment|/**    * Helper functions to convert IOException to MetaException    */
 specifier|public
 name|FileSystem
 name|getFs
@@ -423,6 +423,48 @@ block|}
 return|return
 literal|null
 return|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|closeFs
+parameter_list|(
+name|FileSystem
+name|fs
+parameter_list|)
+throws|throws
+name|MetaException
+block|{
+try|try
+block|{
+if|if
+condition|(
+name|fs
+operator|!=
+literal|null
+condition|)
+block|{
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|MetaStoreUtils
+operator|.
+name|logAndThrowMetaException
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Hadoop File System reverse lookups paths with raw ip addresses The File    * System URI always contains the canonical DNS name of the Namenode.    * Subsequently, operations on paths with raw ip addresses cause an exception    * since they don't match the file system URI.    *    * This routine solves this problem by replacing the scheme and authority of a    * path with the scheme and authority of the FileSystem that it maps to.    *    * @param path    *          Path to be canonicalized    * @return Path with canonical scheme and authority    */
 specifier|public
@@ -591,16 +633,20 @@ parameter_list|)
 throws|throws
 name|MetaException
 block|{
-try|try
-block|{
 name|FileSystem
 name|fs
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fs
+operator|=
 name|getFs
 argument_list|(
 name|f
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|LOG
 operator|.
 name|debug
@@ -637,6 +683,11 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|closeFs
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
 name|MetaStoreUtils
 operator|.
 name|logAndThrowMetaException
@@ -671,16 +722,20 @@ operator|+
 name|f
 argument_list|)
 expr_stmt|;
-try|try
-block|{
 name|FileSystem
 name|fs
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fs
+operator|=
 name|getFs
 argument_list|(
 name|f
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 operator|!
@@ -815,6 +870,11 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|closeFs
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
 name|MetaStoreUtils
 operator|.
 name|logAndThrowMetaException
@@ -1450,16 +1510,20 @@ parameter_list|)
 throws|throws
 name|MetaException
 block|{
-try|try
-block|{
 name|FileSystem
 name|fs
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fs
+operator|=
 name|getFs
 argument_list|(
 name|f
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|FileStatus
 name|fstatus
 init|=
@@ -1500,6 +1564,11 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|closeFs
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
 name|MetaStoreUtils
 operator|.
 name|logAndThrowMetaException
